--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             </div>
         </div>
         </footer>
-        <div class="backdrop is-open">
+        <div class="backdrop">
             <div class="modal-window">
                 <button class="close-button" type="button">
                     <svg class="close-button-icons" width="8" height="8" aria-label="modal close icon">
