--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                         
                                 <use href="./images/icons.svg#icon-phone"></use>
                             </svg>
-                    </div>
+                        </div>
                     </div>
                     <div class="modal-window-wrapper">
                         <label class="modal-window-label" for="user-email">Email</label>
@@ -444,7 +444,7 @@
                         </div>
                     
                     </div>
-                    <div class="modal-window-wrapper">
+                    <div class="modal-window-textarea-wrapper">
                         <label class="modal-window-label" for="user-comment">Comment</label>
                         <textarea class="modal-window-textarea" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
 
