--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 
             </div>
             <div class="bottom-page-social">
-                <p class="bottom-page-text social-text">Social media</p>
+                <p class="bottom-page-social-text">Social media</p>
                 <ul class="bottom-page-socials-list">
                     <li class="bottom-page-socials-item">
                         <a class="bottom-page-socials-link link" href="">
